--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # application.properties
-username=tomsmith
-password=SuperSecretPassword!
-wrongusername=wronguser
-wrongpassword=wrongpassword
-lt.username=kinivinayak07
-lt.accessKey=LT_KObI5AGXsGAM3ZybHm3Xhd66ZnixjtCJiORclqELEFGkgBR
+username=
+password=
+wrongusername=
+wrongpassword=
+lt.username=
+lt.accessKey=
+
+#Supersecret add your credentials to move forwared :X
